MLOps-Architecture/Settings_Microk8s/deploy_micro_inf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-inferencia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-inferencia
  template:
    metadata:
      labels:
        app: api-inferencia
    spec:
      serviceAccountName: my-app-sa
      nodeName: minikube
      containers:
      - image: mgrodrigues001/api_flask_inferencia:inf_v8.0
        imagePullPolicy: Always
        name: api-inferencia
        resources:
          limits:
            cpu: "500m"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "2Gi"
        ports:
        - containerPort: 5001
        command: ["/bin/sh"]
        args: ["-c", "tail -f /dev/null"]
        volumeMounts:
        - name: app-storage
          mountPath: /app
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: api-inferencia-pvc
