MLOps-Architecture/Settings_Microk8s/deploy_micro_up copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-update
spec:
  selector:
    matchLabels:
      app: api-update
  template:
    metadata:
      labels:
        app: api-update
    spec:
      nodeName: minikube
      containers:
        - image: mgrodrigues001/api_flask_update:up_v8.1
          imagePullPolicy: Always
          name: api-update
          resources:
          limits:
            cpu: "1500m"
            memory: "12Gi"
          requests:
            cpu: "1500m"
            memory: "6Gi"
          ports:
          - containerPort: 5002
          command: ["/bin/sh"]
          args: ["-c", "tail -f /dev/null"]
          volumeMounts:
          - name: app-storage
            mountPath: /app
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: api-update-pvc
