MLOps-Architecture/Settings_Microk8s/03-kafka_ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30808
  selector:
    app: kafka-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
  namespace: kafka
  labels:
    app: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      nodeName: minikube
      containers:
        - name: kafka-ui
          image: provectuslabs/kafka-ui:v0.7.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
