MLOps-Architecture/Settings_Microk8s/04-mlflow.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30500
  selector:
    app: mlflow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      volumes: # --- Added for persistence ---
        - name: mlflow-storage
          persistentVolumeClaim:
            claimName: mlflow-pvc
      containers:
      - name: mlflow
        image: ghcr.io/mlflow/mlflow:v2.0.1
        ports:
        - containerPort: 5000
        volumeMounts: # --- Added for persistence ---
          - name: mlflow-storage
            mountPath: /mlartifacts
        command: ["mlflow"]
        args:
          - server
          - --backend-store-uri
          - sqlite:////mlartifacts/mlflow.db # --- Path updated for persistence ---
          - --host
          - 0.0.0.0
          - --port
          - "5000"
        resources:
          requests:
            memory: "4Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "1"
